[package]
name = "solana-test-framework"
version = "0.1.0"
edition = "2021"
authors = ["lowprivuser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
anchor = ["anchor-lang"]

[dependencies]
solana-program-test = { version = "1.9" }
solana-sdk = { version = "1.9" }
solana-program = { version = "1.9" }
solana-banks-client = { version = "1.9" }
spl-token = { version = "3.2.0" }
spl-associated-token-account = { version = "1.0.3" }
anchor-lang = { version = "0.24.2", optional = true }
async-trait = { version = "0.1.52" }
futures = { version = "0.3" }